--- a/app/views/layout.jade
+++ b/app/views/layout.jade
@@ -3,7 +3,7 @@ html
     head
         title Polling
         link(href='//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css', rel='stylesheet')
-        link(href='//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css', rel='stylesheet')
+        link(href='./css/site.css', rel='stylesheet')
     body
         block content
         
